--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
-<html>
+
+<html lang="en">
 
 <head>
 	<meta charset="utf-8">
@@ -16,13 +17,14 @@
 	<header>
 		<div class="logo">Jacob Brown
 		<h2>Software Developer</h2>
+		<h3>Limitless Possibilities</h3>
 	</header>
 
 	<main>
 
 		<!-- Introduction -->
 		<section>
-			<img src="images/introduction/Jacob Brown.jpg" alt="Jacob Brown - Profile Photo">
+			<img src="images/introduction/JacobBrown.jpg" alt="Jacob Brown - Profile Photo">
       <h1>Hi! I'm Jacob Brown</h1>
       <p>I am a software developer living in Kansas City, Mo.</p>
         <p>As a Innovative thinker, I'm interested in:</p>
@@ -40,7 +42,7 @@
       <h2 class="border-top">About Jacob</h2>
         <p>After graduating thinkful I plan on getting a position in game development. Also diving into the world of virtual reality.</p>
 
-        <p>As a student at <a href="http://thinkful.com">Thinkful</a>, I've begun my journey to becoming a software developer and couldn't be happier!</a>
+        <p>As a student at <a href="http://thinkful.com">Thinkful</a>, I've begun my journey to becoming a software developer and couldn't be happier!</p>
 
         <p>If you're looking to hire a new developer please reach out! I am so excited to work with other developers to build great software.</p>
       </section>
