--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
 
 		<!-- Introduction -->
 		<section>
-			<img src="images/introduction/JacobBrown.jpg" alt="Jacob Brown - Profile Photo">
+			<img src="images/introduction/Jacob Brown.jpg" alt="Jacob Brown - Profile Photo">
       <h1>Hi! I'm Jacob Brown</h1>
       <p>I am a software developer living in Kansas City, Mo.</p>
         <p>As a Innovative thinker, I'm interested in:</p>
