--- a/index.html
+++ b/index.html
@@ -38,14 +38,16 @@
     </section>
 
     <!-- About Me -->
-    <section>
+    <article>
       <h2 class="border-top">About Jacob</h2>
-        <p>After graduating thinkful I plan on getting a position in game development. Also diving into the world of virtual reality.</p>
+        <p>After graduating thinkful I plan on getting a position in game development. Also diving into the world of virtual reality. I love web development!</p>
 
         <p>As a student at <a href="http://thinkful.com">Thinkful</a>, I've begun my journey to becoming a software developer and couldn't be happier!</p>
 
-        <p>If you're looking to hire a new developer please reach out! I am so excited to work with other developers to build great software.</p>
-      </section>
+        <p>If you're looking to hire a new developer please reach out! I am so excited to work with other developers to build a great team.</p>
+	
+	<p>I also like to snowboard, skateboard, parkour, and travel.</p>
+      </article>
 
       <!-- Contact -->
       <section id="contact">
