--- a/index.html
+++ b/index.html
@@ -38,8 +38,9 @@
     </section>
 
     <!-- About Me -->
-    <article>
+    <section>
       <h2 class="border-top">About Jacob</h2>
+	 <article>
         <p>After graduating thinkful I plan on getting a position in game development. Also diving into the world of virtual reality. I love web development!</p>
 
         <p>As a student at <a href="http://thinkful.com">Thinkful</a>, I've begun my journey to becoming a software developer and couldn't be happier!</p>
@@ -47,7 +48,8 @@
         <p>If you're looking to hire a new developer please reach out! I am so excited to work with other developers to build a great team.</p>
 	
 	<p>I also like to snowboard, skateboard, parkour, and travel.</p>
-      </article>
+	   </article>
+      </section>
 
       <!-- Contact -->
       <section id="contact">
