--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
 
         <p>If you're looking to hire a new developer please reach out! I am so excited to work with other developers to build a great team.</p>
 	
-	<p>I also like to snowboard, skateboard, parkour, <a href="https://www.youtube.com/channel/UCM93mdp-96FgHg2sZRtAu8Q/featured?view_as=subscriber/">My YouTube Channel</a>, and travel.</p>
+	<p>I also like to snowboard, skateboard, parkour, and travel.</p>
 	    
       </section>
 
