--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 <body>
 
 	<header>
-		<div class="logo">Jacob Brown
+		<div class="logo">Jacob Brown</div>
 		<h2>Software Developer</h2>
 		<h3>Limitless Possibilities</h3>
 	</header>
