--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
 
         <p>Please take a look at my website and feel free to <a href="#contact">Contact Me!</a></p>
     </section>
-
+	<hr>
     <!-- About Me -->
     <section>
       <h2 class="border-top">About Jacob</h2>
@@ -49,7 +49,7 @@
 	<p>I also like to snowboard, skateboard, parkour, <a href="https://www.youtube.com/channel/UCM93mdp-96FgHg2sZRtAu8Q/featured?view_as=subscriber">My YouTube Channel</a>, and travel.</p>
 	    
       </section>
-
+	<hr>
       <!-- Contact -->
       <section id="contact">
         <h2 class="border-top">Contact Jacob</h2>
@@ -65,9 +65,9 @@
         <iframe src="https://www.google.com/maps/d/embed?mid=1gtGmPHUvXdl7Qz0DEzgsZff5lUQ" height="450" allowfullscreen=""></iframe>
         </section>
     </main>
-	<hr>
+	
     <footer>
-      <p>&copy; Jacob Brown</p>
+      <article>&copy; Jacob Brown</article>
     </footer>
     
     <script src="script.js"></script>
