--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 <head>
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width">
-	<title>Jacob Brown | Software Developer | Portfolio</title>
+	<title>Jacob Brown | Full Stack Developer | Portfolio</title>
 	<link href="https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.1/normalize.min.css" rel="stylesheet" type="text/css" />
 	<link href="https://fonts.googleapis.com/css2?family=Montserrat+Alternates:wght@400;500;700&family=Montserrat:wght@300;700&family=Nanum+Pen+Script&display=swap"
 	 rel="stylesheet">
@@ -26,7 +26,7 @@
 		<section>
 			<img src="images/introduction/JacobBrown.jpg" alt="Jacob Brown - Profile Photo">
       <h1>Hi! I'm Jacob Brown</h1>
-      <p>I am a software developer living in Kansas City, Mo.</p>
+      <p>I am a Full stack developer living in Kansas City, Mo.</p>
         <p>As a Innovative thinker, I'm interested in:</p>
         <ul>
           <li>Future technologies.</li>
