--- a/index.html
+++ b/index.html
@@ -3,6 +3,8 @@
 <html lang="en">
 
   <head>
+    <title>About Jacob Brown</title>
+
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
@@ -93,7 +95,7 @@
               <li>HTML</li>
               <li>CSS</li>              
               <li>Node.js</li>
-              <li>Bootstrap</li>              
+              <li>Bootstrap</li>
               <li>React</li>
             </ul>
           </p>
@@ -169,6 +171,7 @@
 
     <!-- Footer Section -->
     <footer class="footer" id="contact">
+      <h2 class="section__title section__title--work">Connect links</h2>
       <a href="mailto:flarenee13@gmail.com" class="footer__link"
         >flarenee13@gmail.com</a
       >
