--- a/index.html
+++ b/index.html
@@ -89,16 +89,16 @@
               I appreciate working on a team of great programmers that are as enthusiastic about coding as I am!
           </p>
           
-          <p class="service-left">Here are software development tools I have used:
-            <ul class="skills-list">
-              <li>Javascript (ES6+)</li>
-              <li>HTML</li>
-              <li>CSS</li>              
-              <li>Node.js</li>
-              <li>Bootstrap</li>
-              <li>React</li>
-            </ul>
-          </p>
+          <p class="service-left">Here are software development tools I have used:</p>
+          <ul class="skills-list">
+            <li>Javascript (ES6+)</li>
+            <li>HTML</li>
+            <li>CSS</li>              
+            <li>Node.js</li>
+            <li>Bootstrap</li>
+            <li>React</li>
+          </ul>
+          
         </div>
       </div>
 
