--- a/index.html
+++ b/index.html
@@ -114,9 +114,9 @@
           Hi there! I'm Jacob, a Software Engineer currently living in Kansas City, Mo. 
         </p>
         <p>
-            Jacob has worked in many different backgrounds gaining insider knowledge
+            I has worked in many different backgrounds gaining insider knowledge
             of operations of large companies. Security, manufacturing, distribution,
-            and Supply/Demand Analytics. His commonly used applications
+            and Supply/Demand Analytics. I commonly used applications
             are Visual Studio Code, Slack, Zoom, Discord, Unity, Filmora 9, Lightroom, Adobe,
             Audacity, Inkscape, and Plural Sight.
           </p>
@@ -170,11 +170,33 @@
     </section>
 
     <!-- Footer Section -->
+    
     <footer class="footer" id="contact">
       <h2 class="section__title section__title--work">Connect links</h2>
+      <main>
+
+        <!-- Contact -->
+        <div class="item">
+          <form
+            action="https://formspree.io/f/xpzoppew"
+            method="Post"
+            target="_blank"
+          >
+            <label for="user-name" class="name-style">Name:</label>
+            <input id="user-name" type="text" name="name" />
+            <label for="user-email">Email:</label>
+            <input id="user-email" type="text" name="name" />
+            <label for="user-message">Message:</label>
+            <textarea name="message" id="user-message"></textarea>
+
+            <button type="submit" class="btn-style">Submit</button>
+          </form>
+        </div>
+      </main>
       <a href="mailto:flarenee13@gmail.com" class="footer__link"
         >flarenee13@gmail.com</a
       >
+      
 
       <!-- Social  Media Section -->
       <ul class="social-list">
