--- a/index.html
+++ b/index.html
@@ -31,6 +31,19 @@
       href="https://fonts.googleapis.com/css2?family=Source+Code+Pro:wght@400;900&family=Source+Sans+Pro:wght@300;900&display=swap"
       rel="stylesheet"
     />
+    <!-- thumbnail for LinkedIn featured image -->
+    <meta name="intro" content="_" />
+    <meta name="title" property="og:title" content="_" />
+    <meta property="og:type" content="_" />
+    <meta 
+      name="intro image" 
+      property="og:image"
+      content="https://www.google.com/search?q=portfolio&rlz=1C1CHBF_enUS914US914&sxsrf=ALeKk01uRdh52lHTs7A6PcA-7VeEhm97QA:1614350940448&source=lnms&tbm=isch&sa=X&ved=2ahUKEwiw_ePy5YfvAhWEXM0KHehaBTgQ_AUoAXoECBcQAw&biw=1920&bih=937#imgrc=FkDTtvoS1ffrEM" />
+    <meta 
+       name="description" 
+       property="og:description" 
+       content="_" /><meta name="author" content="_" />
+    
   </head>
 
   <body>
