--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
     <meta 
       name="intro image" 
       property="og:image"
-      content="https://www.google.com/search?q=portfolio&rlz=1C1CHBF_enUS914US914&sxsrf=ALeKk01uRdh52lHTs7A6PcA-7VeEhm97QA:1614350940448&source=lnms&tbm=isch&sa=X&ved=2ahUKEwiw_ePy5YfvAhWEXM0KHehaBTgQ_AUoAXoECBcQAw&biw=1920&bih=937#imgrc=FkDTtvoS1ffrEM" />
+      content="https://www.flickr.com/photos/smemon/4636349357/in/photolist-84Gv8T-8CaFyv-8TWHS3-2MtNPH-48CrZe-dsZLbC-dsZz6H-dsZLh9-dsZzpi-dsZL4m-dsZzn6-dsZL7Y-dsZL19-yBNzwJ-hsJrnF-hsJBDy-hsJ72B-hsJ82J-hsJ6H1-hsJ6Ke-hsK62N-hsJ7JP-ESECge-8kkeXd-8kh3hM-2WP4n-8kh3EK-hsKXSV-EEa42-mEEBAi-mEG7Md-hsJ7AJ-hsJ8rw-mEG655-mEA8Au-mEysxH-mEG9qo-6siFCk-4NN73m-36fNeJ-9Q5Q8i-9Uuaw8-9Q5QDc-9bzCf7-9Q5Qsn-9Q5PYp-8XDwHV-HMQ5o-9vQY2A-5Zm9am" title="portfolio"><img src="https://live.staticflickr.com/3365/4636349357_b401b9659e_c.jpg" width="750" height="250" alt="portfolio"></a><script async src="//embedr.flickr.com/assets/client-code.js" />
     <meta 
        name="description" 
        property="og:description" 
